MenuProducerService.Api/k8s/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth
    tier: backend
    environment: production
  annotations:
    description: "Service para expor o microsserviço auth"
    prometheus.io/scrape: "true"
    prometheus.io/path: "/auth/metrics"
    prometheus.io/port: "80"
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
