MenuProducerService.Api/k8s/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: menu-producer-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /menu-producer/health
        pathType: Prefix
        backend:
          service:
            name: menu-producer-service
            port:
              number: 80
